--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="wrap">
 
     <header class="main-header">
-        <div class="container">
+        <div class="container clearfix">
             <h1 class="name"><a href="#">Best City Guide</a></h1>
             <ul class="main-nav">
                 <li><a href="#">ice cream</a></li>
