Create and style the layout containers

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
 <header class="main-header">
+    <div class="container">
     <h1 class="name"><a href="#">Best City Guide</a></h1>
     <ul class="main-nav">
         <li><a href="#">ice cream</a></li>
@@ -17,6 +18,7 @@
         <li><a href="#">tea</a></li>
         <li><a href="#">coffee</a></li>
     </ul>
+    </div>
 </header><!--/.main-header-->
 
 <div class="banner">
@@ -25,6 +27,7 @@
     <span class="tagline">The best drinks and eats in the best city ever.</span>
 </div><!--/.banner-->
 
+<div class="container">
 <div class="secondary col">
     <h2>Welcome!</h2>
     <p>Everything in this city is worth waiting in line for.</p>
@@ -44,6 +47,7 @@
     <p><strong>Train: </strong>Pie apple pie pudding I love wafer toffee liquorice sesame snaps lemon drops. Lollipop gummi bears dessert muffin I love fruitcake toffee pie.</p>
     <p><strong>Car: </strong>Jelly cotton candy bonbon jelly-o jelly-o I love. I love sugar plum chocolate cake pie I love pastry liquorice.</p>
 </div><!--/.tertiary-->
+</div>
 
 <footer class="main-footer">
     <span>&copy;2015 Residents of The Best City Ever.</span>
